# vyatta-upnp

./: AUTHORS  Makefile.am  configure.ac
debian/: changelog  control  vyatta-upnp.postinst.in
lib/Vyatta/: Upnp.pm
scripts/: vyatta-restart-upnp
scripts/system/: vyatta-upnp.pl
templates-op/restart/upnp/: node.def
templates/service/upnp/: node.def
templates/service/upnp/downstream-bitrate/: node.def
templates/service/upnp/listen-on/: node.def
templates/service/upnp/outbound-interface/: node.def
templates/service/upnp/upstream-bitrate/: node.def
